# Sentiment_Analysis

./: README.md  dockerfile  pyproject.toml
data/: BBCA.JK new.csv
data/test/: BBCA.JK_monthly new.csv  BBCA.JK_weekly  new.csv
notebook/: EDA.ipynb  script_test.ipynb
src/: my_app.py
src/test/: test_func.py
test/: test_func.py  test_my_app.py
